--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15756,12 +15756,21 @@ label {
         height: 90%;
         margin-bottom: 20px; }
 
+.transform-modal .modal-dialog {
+  margin: 5% auto;
+  width: 70%;
+  height: 80%; }
+
 .menu-col {
   width: 305px !important; }
 
 .content-col {
   padding: 0;
   width: calc(100% - 340px) !important; }
+
+.row-disabled {
+  cursor: default !important;
+  background: #eee !important; }
 
 .list-group-item .search_icon {
   float: right;
