--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15758,8 +15758,8 @@ label {
 
 .transform-modal .modal-dialog {
   margin: 5% auto;
-  width: 70%;
-  height: 80%; }
+  width: 80%;
+  height: 90%; }
 
 .menu-col {
   width: 305px !important; }
@@ -15771,6 +15771,18 @@ label {
 .row-disabled {
   cursor: default !important;
   background: #eee !important; }
+
+.table-small {
+  font-size: 12px; }
+  .table-small td {
+    padding: 2px 4px !important; }
+
+.scrollable-body {
+  max-height: 600px;
+  overflow-y: scroll; }
+
+.modal-open {
+  overflow: hidden !important; }
 
 .list-group-item .search_icon {
   float: right;
