--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,5 +1,6 @@
 // @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700");
+@import "variables";
 @import "bootstrap";
 // @import "../bower/bootswatch/flatly/bootstrap.min";
 // @import "../bower/bootswatch/spacelab/bootstrap.min";
