--- a/resources/assets/sass/bootstrap.scss
+++ b/resources/assets/sass/bootstrap.scss
@@ -1083,7 +1083,7 @@ html {
 }
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.42857143;
   color: #333;
   background-color: #fff;
@@ -1097,7 +1097,7 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #8a4a4a;
+  color: $main-color;
   text-decoration: none;
 }
 a:hover,
@@ -1337,7 +1337,7 @@ mark,
   color: #777;
 }
 .text-primary {
-  color: #8a4a4a;
+  color: $main-color;
 }
 a.text-primary:hover,
 a.text-primary:focus {
@@ -1373,7 +1373,7 @@ a.text-danger:focus {
 }
 .bg-primary {
   color: #fff;
-  background-color: #8a4a4a;
+  background-color: $main-color;
 }
 a.bg-primary:hover,
 a.bg-primary:focus {
@@ -2264,6 +2264,7 @@ th {
   width: 100%;
   max-width: 100%;
   margin-bottom: 20px;
+  font-size: 12px;
 }
 .table > thead > tr > th,
 .table > tbody > tr > th,
@@ -2271,7 +2272,7 @@ th {
 .table > thead > tr > td,
 .table > tbody > tr > td,
 .table > tfoot > tr > td {
-  padding: 8px;
+  padding: 4px;
   line-height: 1.42857143;
   vertical-align: top;
   border-top: 1px solid #ddd;
@@ -3115,7 +3116,7 @@ fieldset[disabled] .btn-default.focus {
 }
 .btn-primary {
   color: #fff;
-  background-color: #8a4a4a;
+  background-color: $main-color;
   border-color: #2e6da4;
 }
 .btn-primary:focus,
@@ -3163,11 +3164,11 @@ fieldset[disabled] .btn-primary:focus,
 .btn-primary.disabled.focus,
 .btn-primary[disabled].focus,
 fieldset[disabled] .btn-primary.focus {
-  background-color: #8a4a4a;
+  background-color: $main-color;
   border-color: #2e6da4;
 }
 .btn-primary .badge {
-  color: #8a4a4a;
+  color: $main-color;
   background-color: #fff;
 }
 .btn-success {
@@ -3400,7 +3401,7 @@ fieldset[disabled] .btn-danger.focus {
 }
 .btn-link {
   font-weight: normal;
-  color: #8a4a4a;
+  color: $main-color;
   border-radius: 0;
 }
 .btn-link,
@@ -3569,7 +3570,7 @@ tbody.collapse.in {
 .dropdown-menu > .active > a:focus {
   color: #fff;
   text-decoration: none;
-  background-color: #8a4a4a;
+  background-color: $main-color;
   outline: 0;
 }
 .dropdown-menu > .disabled > a,
@@ -4004,7 +4005,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #eee;
-  border-color: #8a4a4a;
+  border-color: $main-color;
 }
 .nav .nav-divider {
   height: 1px;
@@ -4097,7 +4098,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #fff;
-  background-color: #8a4a4a;
+  background-color: $main-color;
 }
 .nav-stacked > li {
   float: none;
@@ -4724,7 +4725,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 6px 12px;
   margin-left: -1px;
   line-height: 1.42857143;
-  color: #8a4a4a;
+  color: $main-color;
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #ddd;
@@ -4758,8 +4759,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   z-index: 3;
   color: #fff;
   cursor: default;
-  background-color: #8a4a4a;
-  border-color: #8a4a4a;
+  background-color: $main-color;
+  border-color: $main-color;
 }
 .pagination > .disabled > span,
 .pagination > .disabled > span:hover,
@@ -4875,7 +4876,7 @@ a.label:focus {
   background-color: #5e5e5e;
 }
 .label-primary {
-  background-color: #8a4a4a;
+  background-color: $main-color;
 }
 .label-primary[href]:hover,
 .label-primary[href]:focus {
@@ -4943,7 +4944,7 @@ a.badge:focus {
 }
 .list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #8a4a4a;
+  color: $main-color;
   background-color: #fff;
 }
 .list-group-item > .badge {
@@ -5018,7 +5019,7 @@ a.badge:focus {
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #8a4a4a;
+  border-color: $main-color;
 }
 .thumbnail .caption {
   padding: 9px;
@@ -5140,7 +5141,7 @@ a.thumbnail.active {
   line-height: 20px;
   color: #fff;
   text-align: center;
-  background-color: #8a4a4a;
+  background-color: $main-color;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
           box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
   -webkit-transition: width .6s ease;
@@ -5248,7 +5249,7 @@ a.thumbnail.active {
 .list-group-item {
   position: relative;
   display: block;
-  padding: 10px 15px;
+  padding: 7px 10px;
   margin-bottom: -1px;
   background-color: #fff;
   border: 1px solid #ddd;
@@ -5304,8 +5305,8 @@ button.list-group-item {
 .list-group-item.active:focus {
   z-index: 2;
   color: #fff;
-  background-color: #8a4a4a;
-  border-color: #8a4a4a;
+  background-color: $main-color;
+  border-color: $main-color;
 }
 .list-group-item.active .list-group-item-heading,
 .list-group-item.active:hover .list-group-item-heading,
@@ -5459,7 +5460,7 @@ button.list-group-item-danger.active:focus {
   padding: 15px;
 }
 .panel-heading {
-  padding: 10px 15px;
+  padding: 7px 10px;
   border-bottom: 1px solid transparent;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
@@ -5701,22 +5702,22 @@ button.list-group-item-danger.active:focus {
   border-bottom-color: #ddd;
 }
 .panel-primary {
-  border-color: #8a4a4a;
+  border-color: $main-color;
 }
 .panel-primary > .panel-heading {
   color: #fff;
-  background-color: #8a4a4a;
-  border-color: #8a4a4a;
+  background-color: $main-color;
+  border-color: $main-color;
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #8a4a4a;
+  border-top-color: $main-color;
 }
 .panel-primary > .panel-heading .badge {
-  color: #8a4a4a;
+  color: $main-color;
   background-color: #fff;
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #8a4a4a;
+  border-bottom-color: $main-color;
 }
 .panel-success {
   border-color: #d6e9c6;
