--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -4021,3 +4021,7 @@ label {
 a.disabled {
     pointer-events: none;
 }
+
+.hint--multiline:hover:before, .hint--multiline:hover:after {
+  white-space: pre;
+}
