--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -4021,3 +4021,11 @@ label {
 a.disabled {
     pointer-events: none;
 }
+
+.span-in-h4 {
+    float: right;
+    font-size: 12px;
+    font-weight: normal;
+    top: 6px;
+    position: relative;
+}
