--- a/resources/assets/sass/variables.scss
+++ b/resources/assets/sass/variables.scss
@@ -23,6 +23,6 @@ $bright_green		: #5cb85c;
 
 $dark_red			: #A94442;
 
-$hr_gray 			: #eee;
+$gray-main 			: #eee;
 $half_black			: rgba(0, 0, 0, .5);
 $quater_black 		: rgba(0, 0, 0, .25);
