--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -15,6 +15,7 @@
 @import "../bower/hint.css/hint";
 @import "../bower/ng-tags-input/ng-tags-input";
 @import "../bower/ng-tags-input/ng-tags-input.bootstrap";
+@import "../bower/vue-virtual-scroller/dist/vue-virtual-scroller";
 
 @import "style";
 @import "search";
