--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12504,6 +12504,33 @@ tags-input.ti-input-sm .tags .input, .input-group-sm tags-input .tags .input {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #c0a16b; }
 
 /*# sourceMappingURL=ng-tags-input.bootstrap.css.map */
+.virtual-scroller[data-v-303cd025]:not(.page-mode) {
+  overflow-y: auto; }
+
+.item-container[data-v-303cd025] {
+  box-sizing: border-box;
+  width: 100%;
+  overflow: hidden; }
+
+.items[data-v-303cd025] {
+  width: 100%; }
+
+.resize-observer[data-v-c7b3205a] {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  border: none;
+  background-color: transparent;
+  pointer-events: none;
+  display: block;
+  overflow: hidden; }
+
+.test h1[data-v-5ee0142a] {
+  color: #40b883; }
+
 .gmnoprint:not(.gm-bundled-control) {
   display: none; }
 
@@ -13376,7 +13403,18 @@ md-input-container label {
 body {
   font-family: "Open Sans";
   padding-top: 20px !important;
-  overflow-x: hidden; }
+  overflow: hidden; }
+
+html, body {
+  height: 100%; }
+  html #app, body #app {
+    height: 100%; }
+    html #app .row, body #app .row {
+      height: 100%; }
+      html #app .row > div, body #app .row > div {
+        height: 100%; }
+      html #app .row .panel, body #app .row .panel {
+        height: calc(100% - 5px); }
 
 .badge-danger {
   background-color: #A94442; }
@@ -15761,6 +15799,9 @@ a.disabled {
 .link-raw {
   text-decoration: none !important;
   cursor: default !important; }
+
+.virtual-scroller {
+  max-height: 1070px; }
 
 .list-group-item .search_icon {
   float: right;
