remove horizontal body scroll

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13402,7 +13402,8 @@ md-input-container label {
 
 body {
   font-family: "Open Sans";
-  padding-top: 20px !important; }
+  padding-top: 20px !important;
+  overflow-x: hidden; }
 
 html, body {
   height: 100%; }
