--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -1068,7 +1068,7 @@ color: $half_black;
 body {
     font-family: "Open Sans";
 padding-top: 20px !important;
-// overflow-x: hidden;
+overflow-x: hidden;
 // overflow: hidden;
 // background-color: #eee;
 // background-image: url("../img/background/bg.jpg");
