--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -3064,17 +3064,18 @@ border-top: 1px solid rgba(0,  0,  0, 0.4);
 margin-top: 5px;
 }
 
-.is-draggable {
-margin-bottom: 10px;
-background-color: rgba(255, 255, 255, 0.1);
-& hr {
-    border-top: 1px solid rgba(0,  0,  0, 0.4);
-    margin-top: 5px;
-}
-&.ui-draggable-dragging {
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-}
-}
+// .is-draggable {
+//     margin-bottom: 10px;
+//     background-color: rgba(255, 255, 255, 0.1);
+//     & hr {
+//         border-top: 1px solid rgba(0,  0,  0, 0.4);
+//         margin-top: 5px;
+//     }
+//     &.ui-draggable-dragging {
+//         box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+//     }
+// }
+
 
 .request-status-drop-hover {
 // 	background: #337ab7;
@@ -4091,4 +4092,28 @@ a.disabled {
 [class*="hint--"]:after {
     white-space: pre-line !important;
     width: 303px !important;
+}
+
+div.table-like {
+    line-height: 1;
+    & > div {
+        display: inline-block;
+        width: 100%;
+        & > div {
+            padding: 4px;
+            display: inline-block;
+            float: left;
+            border-bottom: 1px solid #ddd;
+        }
+    }
+}
+
+.is-dragging {
+    // visibility: hidden;
+    opacity: .05;
+}
+
+.drag-over {
+    background-color: $main-color;
+    color: white;
 }
