--- a/public/css/signin.css
+++ b/public/css/signin.css
@@ -1,62 +1,214 @@
+html, body {
+    height: 100%;
+}
+
 body {
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #eee;
-  margin-top: 0 !important;
-  background-image: url('http://www.a-perspektiva.ru/images/bg3.gif');
-  background-repeat: repeat;
+  /*background-image: url('../img/wallpapper/3.jpg');*/
+  background-image: none;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-position: 50% 50%;
 }
 
-.form-signin {
-    max-width: 430px;
-    padding: 50px;
-    margin: 0 auto;
-    /*background-color: rgba(226, 226, 226, 0.75);*/
-    background-color: rgba(138, 74, 74, 0.06);
-    border-radius: 10px;
-    margin-top: 140px;
+center.invalid {
+    /* also need animation and -moz-animation */
+    animation: shakeMac2 .1s linear;
+    /*-webkit-animation: shakeMac2 .2s linear;*/
+    animation-iteration-count: 2;
+}
+
+.input-wrapper {
+    margin-bottom: 8px;
     position: relative;
-    box-shadow: 0 0 10px 1px rgba(154, 104, 104, 0.4);
-}
-.form-signin .form-signin-heading,
-.form-signin .checkbox {
-  margin-bottom: 10px;
 }
 
-h2 {
-	text-align: center;
+.input-wrapper img {
+    height: 16px;
+    cursor: pointer;
+    outline: none !important;
 }
 
-.error-message {
-  margin-top: 20px;
-  margin-bottom: 0;
-  position: absolute;
-  width: calc(100% - 100px);
-  bottom: -30%;
+.login-icons {
+    right: 6px;
+    top: 9px;
+    position: absolute;
 }
 
-.form-signin .checkbox {
-  font-weight: normal;
+.in-process {
+    height: 26px !important;
+    margin-top: -2px;
 }
-.form-signin .form-control {
-  position: relative;
-  height: auto;
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 10px;
-  font-size: 16px;
+
+.login-icons.ng-hide-add {
+    -webkit-animation: fadeOut 0.2s;
+    display: block!important;
 }
-.form-signin .form-control:focus {
-  z-index: 2;
+.login-icons.ng-hide-remove {
+    -webkit-animation: fadeInLeft 0.3s;
 }
-.form-signin input[type="text"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
+
+.input-wrapper input {
+    border: none;
+    border: 0;
+    outline: none;
+    border-radius: 5px;
+    padding: 10px 12px;
+    width: 230px;
+    background-color: rgba(255, 255, 255, .85);
+    box-shadow: 1px 1px 15px 2px rgba(0, 0, 0, .3);
 }
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+
+.password-start-typing {
+    font: small-caption;
+    font-size: 17px;
 }
+
+/* also need keyframes and -moz-keyframes */
+ @-webkit-keyframes shakeMac {
+    8%, 41% {
+        -webkit-transform: translateX(-10px);
+    }
+    25%, 58% {
+        -webkit-transform: translateX(10px);
+    }
+    75% {
+        -webkit-transform: translateX(-5px);
+    }
+    92% {
+        -webkit-transform: translateX(5px);
+    }
+    0%, 100% {
+        -webkit-transform: translateX(0);
+    }
+}
+
+@-webkit-keyframes shakeMac2 {
+   25% {
+       -webkit-transform: translateX(-10px);
+   }
+   50% {
+       -webkit-transform: translateX(0px);
+   }
+   75% {
+       -webkit-transform: translateX(10px);
+   }
+   0%, 100% {
+       -webkit-transform: translateX(0);
+   }
+}
+
+input:-webkit-autofill {
+    background-color: #FAFFBD !important;
+}
+/*
+input[type="password"] {
+    font-family: caption;
+}*/
+
+::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    color: #9a9a9a;
+}
+
+.wallpaper-by {
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    background: rgba(255, 255, 255, .5);
+    padding: 2px 4px;
+    box-shadow: 0 0 20px rgba(255, 255, 255, .5);
+    font-size: 13px;
+    border-radius: 5px;
+}
+
+
+#center {
+    background: white;
+    padding: 12px 20px;
+    box-shadow: 1px 1px 15px 2px rgba(0, 0, 0, .3);
+    border-radius: 0;
+    width: 220px;
+    position: absolute;
+    top: calc(50% - 109px);
+    left: calc(50% - 110px);
+}
+
+.ladda-spinner {
+    margin-left: -1px;
+    margin-top: 1px;
+}
+
+.group {
+    margin-bottom: 14px;
+}
+
+.group input {
+    text-align: center;
+    background-color: #e8e8e8;
+    outline: none;
+    -webkit-appearance: none;
+    border: none;
+    border-radius: 6px;
+    padding: 7px 4px;
+    width: 100%;
+}
+
+.btn {
+    color: white;
+    width: 100%;
+    background: #853d17;
+    border-radius: 6px;
+}
+
+.btn:hover {
+    color: white;
+    background: #a2572e;
+}
+
+.btn:focus {
+    color: white;
+}
+
+.login-logo img {
+    width: 46px;
+}
+
+.login-logo span {
+    position: absolute;
+    font-size: 10px;
+    font-weight: bold;
+}
+
+ input[disabled] {
+     opacity: .4;
+ }
+
+ .password-controls {
+ 	font-size: 12px;
+ 	text-align: center;
+ 	box-sizing: border-box;
+ 	margin-top: 16px;
+ 	line-height: 18px;
+ }
+
+ .login-errors {
+     position: absolute;
+     background: #fadedf;
+     font-size: 12px;
+     width: 220px;
+     margin-left: -20px;
+     margin-top: 12px;
+     padding: 12px 20px;
+     color: #c40000;
+ }
+
+.input-groups {
+    width: 100%;
+}
+
+input:focus::-webkit-input-placeholder { color:transparent; }
+input:focus:-moz-placeholder { color:transparent; } /* FF 4-18 */
+input:focus::-moz-placeholder { color:transparent; } /* FF 19+ */
+input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
