--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -4154,3 +4154,12 @@ div.table-like {
         overflow: hidden;
     }
 }
+
+.bar-separator {
+    color: #ddd;
+    opacity: .5;
+}
+
+.list-group-item .link-like {
+    color: #555;
+}
